增加歌单缓存功能，准备使用mutagen代替eyed3

--- a/NeteaseMusic.default.conf
+++ b/NeteaseMusic.default.conf
@@ -12,16 +12,16 @@
 baseURL = http://app.yzzzf.xyz:3000
 
 # 下载文件夹
-Dirname = music
+Dirname = new
 
 # 用户登录相关
 [account]
 # 是否使用登录
 useAccount = True
 # 网易云音乐登录账户（手机号 / 邮箱）
-account = xxxxxxxxxx
+account = xxxxxxx
 # 网易云音乐登录密码
-passwd = xxxxxxxxxx
+passwd = xxxxxxxxx
 
 # 下载相关
 [download]
@@ -55,7 +55,7 @@ getMusic = True
 # 音乐码率
 # 32000 为 320kbps
 # 默认 999000 为最大值
-bitRate = 32000
+bitRate = 999000
 
 # 文件名格式化模板
 # 
@@ -65,7 +65,7 @@ bitRate = 32000
 #   artist ：艺术家
 #   album：专辑名
 # 具体格式见后文
-pattern = {index}-{artist}-{name}-{album}
+pattern = {artist}-{name}-{album}
 
 # 格式化方式
 # 
@@ -76,3 +76,14 @@ pattern = {index}-{artist}-{name}-{album}
 #    使用{参数名}的格式
 #    例：{index}-{artist}-{album}
 format = format
+
+# 歌单缓存相关
+[cache]
+# 是否使用缓存
+useCache = True
+
+# 是否缓存数据
+saveCache = True
+
+# 忽略歌单变化，继续使用缓存
+alwaysCache = False
